--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,14 @@
 <html>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="../static/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@yaireo/tagify"></script>
+    <script src="https://unpkg.com/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+    <link href="https://unpkg.com/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
+    <script src="{{ url_for('static',filename='../static/main.js') }}"></script>
     <body>
         <h1 class="text-white">Practicum - BRG</h1>
+        <form action="{{ url_for('oo') }}" method='POST'>
         <div class="form-body">
             <div class="row">
                 <div class="form-holder">
@@ -17,6 +21,7 @@
                                    <textarea class="form-control" rows="35" type="text" name="name" placeholder="Try Typing..." required></textarea>
                                    <div class="valid-feedback">Username field is valid!</div>
                                    <div class="invalid-feedback">Username field cannot be blank!</div>
+                                    <input type="text" id="#inputTag" value="Amsterdam,Washington,Sydney,Beijing,Cairo" data-role="tagsinput">
                                 </div>
                             <div class="form-check">
                               <input class="form-check-input" type="checkbox" value="" id='agree' required/>
@@ -24,8 +29,7 @@
                              <div class="invalid-feedback">Please check the box above</div>
                             </div>
                                 <div class="form-button mt-3">
-                                    <!-- <button id="submit" type="submit" id='pred' class="btn btn-primary" disabled="disabled">Complete</button> -->
-                                    <input type="submit" name="sendNewSms" class="inputButton" id="sendNewSms" value=" Send " />
+                                    <input type="submit" name="sendbutton" id="sendbutton" value=" Send " />
                                 </div>
                             </form>
                         </div>
@@ -33,6 +37,7 @@
                 </div>
             </div>
         </div>
+        </form>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
